# asv

./: .gitignore  README.md  main.py  pyproject.toml
src/: app.py  main.py
src/aasist/: main.py  predict.py  prediction.py
src/d3m/: main.py  modelsummary.py  pred.py
src/dnn/: cnn_gru.py  predict.py  preprocess.py  train.py  train.yaml
src/dnn/models/cnn_gru/: cfg.yaml
