[project]
name = "cs117_asv"
version = "0.1.0"
description = "cs117 asv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "scikit-learn>=1.7.0",
    "soundfile>=0.13.1",
    "tensorboard>=2.19.0",
    "torch>=2.7.1",
    "torchcontrib>=0.0.2",
    "torchnet>=0.0.4",
    "torchsummary>=1.5.1",
]
